# checkin

./: .gitignore  README.md
.github/workflows/: docker-backend.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/src/: main.rs  migration.rs
backend/src/api/: admin.rs  auth.rs  checkin.rs  mod.rs
backend/src/models/: checkin.rs  mod.rs  user.rs
backend/src/utils/: auth_guard.rs  errors.rs  jwt.rs  mod.rs  timezone.rs
frontend/: .env.example  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/ui/: button.tsx  calendar.tsx  switch.tsx
frontend/src/lib/: api.ts  typst-export.ts
frontend/src/pages/: Login.tsx  Register.tsx
frontend/src/pages/admin/: Checkins.tsx  Layout.tsx  Users.tsx  Weekly.tsx
frontend/src/pages/checkin/: History.tsx  Layout.tsx  Today.tsx
frontend/src/store/: useAuth.ts
