[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["typed-header"] }
bcrypt = "0.18.0"
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.11.9"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
log = "0.4.29"
sea-orm = { version = "1.1.19", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "1.1.19"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
